Token verification implemented
added region to .env
removed execcess files
added database to main.ts
added users table to main.ts
---
added token verification middleware
added token verification function (tokens file)

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ CLIENT_SECRET = 5d3ca389cb724e21a079bbbd83123319
 
 AWS_ACCESS_KEY_ID = AKIA2E4MMOEOMFRAUMHX
 AWS_SECRET_ACCESS_KEY = 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
+
+REGION = eu-central-1
